# insights-behavioral-spec

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CODEOWNERS  Dockerfile  FAQ.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  build_deploy.sh  ccx_upgrade_risk_data_eng_tests.sh  ccx_upgrade_risk_inference_tests.sh  cleaner_list.txt  cleaner_tests.sh  docker-compose.yml  dvo_extractor_tests.sh  dvo_writer_tests.sh  exporter_requirements.txt  exporter_test.sh  exporter_tests.sh  insights_content_service_test.sh  insights_content_template_renderer_tests.sh  insights_results_aggregator_mock_tests.sh  insights_results_aggregator_tests.sh  insights_sha_extractor_test.sh  notification_service_tests.sh  notification_writer_tests.sh  parquet_factory_tests.sh  pyproject.toml  renovate.json  requirements.in  requirements.txt  run_in_docker.sh  run_tests.sh  setup.cfg  shellcheck.sh  smart_proxy_tests.sh
.tekton/: insights-behavioral-spec-pull-request.yaml  insights-behavioral-spec-push.yaml
config/: ccx-upgrades-data-eng_logging.yaml  cleaner.toml  dvo_extractor.yaml  dvo_writer_docker_env.toml  insights_results_aggregator.toml  insights_results_aggregator_docker_env.toml  insights_results_aggregator_mock.toml  insights_results_aggregator_no_kafka.toml  insights_results_aggregator_wrong_db.toml  insights_results_aggregator_wrong_kafka.toml  insights_sha_extractor.env  insights_sha_extractor.yaml  insights_sha_extractor_compressed.yaml  notification_service.toml  notification_writer.toml
docs/: 404.html  BDD_intro.md  Gemfile  _config.yml  feature_list.md  index.md  (+5 more)
(+273 files in other folders)
